--- a/components/layout/Footer/Footer.module.css
+++ b/components/layout/Footer/Footer.module.css
@@ -1,8 +1,8 @@
 .footer {
   background-color: #151515;
   color: #f1f1f1;
-  padding: 64px 0 40px;
-  margin-top: 140px;
+  padding: 40px 0;
+  /* margin-top: 140px; */
 }
 
 .container {
