--- a/components/products/ProductCard.module.css
+++ b/components/products/ProductCard.module.css
@@ -3,7 +3,7 @@
   grid-template-rows: auto 1fr;
   background: #ffffff;
   /* border: 1px solid #f0eaea; */
-  border-radius: 14px;
+  /* border-radius: 14px; */
   overflow: hidden;
   transition: transform 150ms ease, box-shadow 150ms ease;
 }
@@ -24,6 +24,7 @@
   aspect-ratio: 1 / 1;
   overflow: hidden;
   background: #f8f6f5;
+  border-radius: 4px;
 }
 
 .img {
@@ -47,9 +48,8 @@
 
 .category {
   margin: 0;
-  font-size: 15px;
+  font-size: 16px;
   color: var(--color-accent);
-  font-weight: 600;
 }
 
 .titleLink {
@@ -60,15 +60,15 @@
 .title {
   margin: 0;
   color: var(--color-text-primary);
-  font-size: 19px;
-  font-weight: 500;
+  font-size: 20px;
   line-height: 1.3;
+  font-weight: 400;
 }
 
 .material {
   margin: 0;
   color: var(--color-text-secondary);
-  font-size: 15px;
+  font-size: 16px;
 }
 
 .message {
@@ -76,43 +76,67 @@
   color: var(--color-text-secondary);
   font-size: 14px;
   min-height: 45px;
+  display: none;
 }
 
 .price {
   margin: 0;
   color: #c35e63;
-  font-size: 15px;
-  font-weight: 700;
+  font-size: 16px;
+  font-weight: 600;
   white-space: nowrap;
 }
 
-.priceGroup {
-  display: inline-flex;
+.priceRow {
+  display: flex;
   align-items: center;
-  gap: 6px;
+  gap: 30px;
+  margin-top: 6px;
 }
 
-.discount {
-  margin: 0;
-  color: #7c2330;
-  font-size: 14px;
-  font-weight: 700;
+.priceOldWrap {
+  position: relative;
+  display: inline-flex;
+  align-items: flex-start;
+}
+
+.priceOld {
+  text-decoration: line-through;
+  color: #a99b98;
+  font-weight: 500;
+}
+
+.priceDiscountBadge {
+  position: absolute;
+  top: -6px;
+  right: -20px;
+  color: #6d201f;
+  font-size: 12px;
+  font-weight: 800;
   white-space: nowrap;
+}
+
+.priceNew {
+  margin: 0;
+  color: #c35e63;
+  font-size: 16px;
+  white-space: nowrap;
+  font-weight: 600;
+  margin-top: -3px;
 }
 
 .actions {
   display: flex;
   gap: 10px;
-  margin-top: 6px;
+  margin-top: 10px;
 }
 
 .button {
   flex: 1;
   padding: 10px 12px;
-  border-radius: 10px;
+  border-radius: 3px;
   border: 1px solid transparent;
-  font-size: 14px;
-  font-weight: 600;
+  font-size: 16px;
   cursor: pointer;
   transition: transform 120ms ease, box-shadow 120ms ease, background 120ms ease,
     color 120ms ease, border-color 120ms ease;
@@ -120,6 +144,13 @@
 
 .button:active {
   transform: translateY(1px);
+}
+
+.button:disabled {
+  cursor: not-allowed;
+  opacity: 0.75;
+  transform: none;
+  box-shadow: none;
 }
 
 .primary {
@@ -145,4 +176,10 @@
 .secondary:focus-visible {
   background: #ecdddc;
   border-color: #e3d7d7;
+}
+
+.secondary:disabled {
+  background: #efe4e4;
+  border-color: #e8dcdc;
+  color: #9d8787;
 }
